--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "axios": "^1.5.0",
     "framer-motion": "^10.16.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.6.0",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
