--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/work-sans": "^5.0.8",
+    "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.5.0",
     "framer-motion": "^10.16.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.0",
+    "react-redux": "^8.1.2",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
