--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.0",
     "react-redux": "^8.1.2",
+    "react-router-dom": "^6.21.3",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
