--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/work-sans": "^5.0.8",
+    "@kinde-oss/kinde-auth-react": "^3.0.24",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.5.0",
     "framer-motion": "^10.16.1",
