--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.0",
+    "react-icons": "^5.0.1",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.21.3",
     "xml2js": "^0.6.2"
